@@ -5,7 +5,8 @@ Changelog
 1.4.7 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Fix javascript calculated row distribution.
+  [Kevin Bieri]
 
 
 1.4.6 (2017-03-07)
